--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -7,8 +7,6 @@ on:
 
 env:
   WORKING_DIRECTORY: "."
-  RUFF_OUTPUT_FILENAME: "ruff.log"
-  CUSTOM_FLAGS: ""
   CUSTOM_PACKAGES: "instructor examples tests"
 
 jobs:
@@ -25,10 +23,7 @@ jobs:
         run: uv python install 3.9
       - name: Install the project
         run: uv sync --all-extras
-      - name: Run Continuous Integration Action
-        uses: astral-sh/ruff-action@v3
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ruff-log
-          path: ${{ env.WORKING_DIRECTORY }}/${{ env.RUFF_OUTPUT_FILENAME }}
+      - name: Ruff lint
+        run: uv run ruff check ${{ env.CUSTOM_PACKAGES }}
+      - name: Ruff format
+        run: uv run ruff format --check ${{ env.CUSTOM_PACKAGES }}
