--- a/.github/workflows/ty.yml
+++ b/.github/workflows/ty.yml
@@ -25,3 +25,5 @@ jobs:
         run: uv sync --all-extras
       - name: Run type check with ty
         run: uv run ty check instructor/
+      - name: Run type check with ty (tests)
+        run: uv run ty check --config-file ty-tests.toml tests
