--- a/requirements.txt
+++ b/requirements.txt
@@ -115,6 +115,8 @@ typer==0.20.0
     # via instructor (pyproject.toml)
 typing-extensions==4.15.0
     # via
+    #   aiosignal
+    #   anyio
     #   openai
     #   pydantic
     #   pydantic-core
